# my_ros_project

./: .gitignore  CMakeLists.txt  GUIDE.md  LOGIC_PRESENTATION_SCRIPT.md  PRESENTATION_SCRIPT.md  PROJECT_PLAN.md  README.md  TASKS.md  architecture_view.html  diagram_preview.html  package.xml  robot_logic.mmd
config/: costmap_common.yaml  forklift_control.yaml  global_costmap.yaml
launch/: bookstore.launch  full_system.launch  library_with_robot.launch  mapping.launch  mapping_auto.launch  mapping_full.launch  navigation.launch  robot_spawn.launch
maps/: library_map.pgm  library_map.yaml
models/book_blue/: model.config  model.sdf
models/book_green/: model.config  model.sdf
models/book_red/: model.config  model.sdf
models/book_tags/materials/scripts/: book_tags.material
models/dropoff_station/: model.config  model.sdf
rviz/: mapping.rviz
scripts/: auto_mapper.py  book_manager.py  clean_world.py  control_panel.py  force_clean_world.py  forklift_test.py  generate_qr_codes.py  library_mission.py  qr_reader.py  remove_desk.py  save_map.sh  setup_environment.py  spawn_books.py  wasd_teleop.py
urdf/: turtlebot3_forklift.urdf.xacro
worlds/: bookstore.world  bookstore_clean.world
